--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,34 @@
             rel="stylesheet"
         />
 
+        <link rel="stylesheet" href="./css/global.css" />
+        <link rel="stylesheet" href="./css/colors.css" />
+        <link rel="stylesheet" href="./css/button.css" />
+        <link rel="stylesheet" href="./css/home.css" />
+
         <title>CoreFriday</title>
     </head>
     <body>
+        <header class="header-container">
+            <div class="header__background-img"></div>
+
+            <div class="header-content">
+                <h1 class="header__title">CoreFriday</h1>
+
+                <div class="header__description">
+                    <p class="description__text">
+                        Venha para black friday da CoreFriday temos descontos de
+                        50%, 75% e até 80% ta imperdivel, cadraste ja seu email
+                        para não perder nossas ofertas!
+                    </p>
+
+                    <button class="button button-primary-light">
+                        Cadastrar email
+                    </button>
+                </div>
+            </div>
+        </header>
+
         <script src="./js/main.js"></script>
     </body>
 </html>
