--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
         <link rel="stylesheet" href="./css/global.css" />
         <link rel="stylesheet" href="./css/colors.css" />
-        <link rel="stylesheet" href="./css/button.css" />
+        <link rel="stylesheet" href="./css/buttons.css" />
         <link rel="stylesheet" href="./css/home.css" />
 
         <title>CoreFriday</title>
@@ -44,6 +44,93 @@
                 </div>
             </div>
         </header>
+
+        <main class="main-container">
+            <h2 class="main__title">Top promoções</h2>
+
+            <section class="promo__cards">
+                <section class="card-container">
+                    <div class="card-container__img">
+                        <img
+                            src="./assets/placa-mae.jpeg"
+                            alt="Placa de computador"
+                            class="product-img"
+                        />
+                    </div>
+
+                    <p class="card__description">
+                        Placa Mae Gigabyte B550 AORUS
+                    </p>
+
+                    <div class="card__price">
+                        <span class="card__price-promo">PROMO</span> R$ 650,00
+                    </div>
+
+                    <div class="card__price-truncated">
+                        <span class="price-truncated">R$ 1300,00</span>
+                        <span class="price-discount">50% desc.</span>
+                    </div>
+
+                    <span class="free-shipping">Frete grátis</span>
+                </section>
+
+                <section class="card-container">
+                    <div class="card-container__img">
+                        <img
+                            src="./assets/mousepad-gamer.jpeg"
+                            alt="Placa de computador"
+                            class="product-img"
+                        />
+                    </div>
+
+                    <p class="card__description">
+                        Placa Mae Gigabyte B550 AORUS
+                    </p>
+
+                    <div class="card__price">
+                        <span class="card__price-promo">PROMO</span> R$ 125,00
+                    </div>
+
+                    <div class="card__price-truncated">
+                        <span class="price-truncated">R$ 500,00</span>
+                        <span class="price-discount">75% desc.</span>
+                    </div>
+
+                    <span class="free-shipping">Frete grátis</span>
+                </section>
+
+                <section class="card-container">
+                    <div class="card-container__img">
+                        <img
+                            src="./assets/cadeira-gamer.jpeg"
+                            alt="Placa de computador"
+                            class="product-img"
+                        />
+                    </div>
+
+                    <p class="card__description">
+                        Placa Mae Gigabyte B550 AORUS
+                    </p>
+
+                    <div class="card__price">
+                        <span class="card__price-promo">PROMO</span> R$ 500,00
+                    </div>
+
+                    <div class="card__price-truncated">
+                        <span class="price-truncated">R$ 2500,00</span>
+                        <span class="price-discount">80% desc.</span>
+                    </div>
+
+                    <span class="free-shipping">Frete grátis</span>
+                </section>
+            </section>
+
+            <section class="resgister-container">
+                <div class="resgister-content">
+                    <h2>Não perca essa oportunidade!</h2>
+                </div>
+            </section>
+        </main>
 
         <script src="./js/main.js"></script>
     </body>
