--- a/src/index.html
+++ b/src/index.html
@@ -26,22 +26,18 @@
     </head>
     <body>
         <header class="header-container">
-            <div class="header__background-img"></div>
+            <h1 class="header__title">CoreFriday</h1>
 
-            <div class="header-content">
-                <h1 class="header__title">CoreFriday</h1>
+            <div class="header__description-content">
+                <p class="description__text">
+                    Venha para black friday da CoreFriday temos descontos de
+                    50%, 75% e até 80% ta imperdivel, cadraste ja seu email para
+                    não perder nossas ofertas!
+                </p>
 
-                <div class="header__description-content">
-                    <p class="description__text">
-                        Venha para black friday da CoreFriday temos descontos de
-                        50%, 75% e até 80% ta imperdivel, cadraste ja seu email
-                        para não perder nossas ofertas!
-                    </p>
-
-                    <button class="button button__primary--light">
-                        Cadastrar email
-                    </button>
-                </div>
+                <button class="button button__primary--light">
+                    Cadastrar email
+                </button>
             </div>
         </header>
 
@@ -131,7 +127,7 @@
                         Não perca essa oportunidade!
                     </h2>
 
-                    <form class="register__form">
+                    <form class="form">
                         <fieldset class="form__fieldset">
                             <legend class="form__title">Seja notificado</legend>
 
