--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
         <link rel="stylesheet" href="./css/global.css" />
         <link rel="stylesheet" href="./css/colors.css" />
         <link rel="stylesheet" href="./css/buttons.css" />
+        <link rel="stylesheet" href="./css/form.css" />
+        <link rel="stylesheet" href="./css/cards.css" />
+        <link rel="stylesheet" href="./css/header.css" />
+        <link rel="stylesheet" href="./css/footer.css" />
         <link rel="stylesheet" href="./css/home.css" />
 
         <title>CoreFriday</title>
